employee-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-deployment
  labels:
    app: employee-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-app
  template:
    metadata:
      labels:
        app: employee-app
    spec:
      containers:
      - name: employee-app
        image: vaishnavivnk/employee-microservice:latest
        ports:
          - containerPort: 5000
