employee-service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  type: LoadBalancer
  selector:
    app: employee-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
