psingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peoplesuite-cc-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: subnet-0aa2079dab810d589, subnet-02f83e65f3406b9f1
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /peoplesuite/apis/employee
            pathType: Prefix
            backend:
              service:
                name: employee-service
                port:
                  number: 80
          - path: /peoplesuite/apis/department
            pathType: Prefix
            backend:
              service:
                name: department-service
                port:
                  number: 80
